# QMud

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: packages.yml  pipelines.yml  tests.yml
resources/: qmud.qrc
resources/appimage/: AppRun  qmud.desktop
resources/windows/: QMud.Windows.manifest  QMud.Windows.rc.in
skeleton/: QMud.conf  QMud.sqlite  cthulhumud.com_8889_cthulhumud_mapper_state.db
skeleton/docs/: tips.txt
skeleton/lua/: getworld.lua  serialize.lua  wait.lua
skeleton/names/: albion.nam  albion1.nam  alver.nam  alver1.nam  alver2.nam  deverry1.nam  dvargar1.nam  dvargar2.nam  f_female.nam  f_male.nam  felana.nam  galler.nam  hober.nam  hober1.nam  kender1.nam  kender2.nam  mall.nam  orc.nam  orc1.nam  orc2.nam  sparhawk.nam
skeleton/spell/: english-words.10  english-words.20  english-words.35  english-words.40
skeleton/worlds/: Default [CM].qdl
src/: AcceleratorUtils.cpp  Accelerators.cpp  Accelerators.h  ActivityDocument.cpp  ActivityDocument.h  ActivityWindow.cpp  ActivityWindow.h  AliasMatchUtils.cpp  AliasMatchUtils.h  AnsiSgrParseUtils.cpp  AnsiSgrParseUtils.h  AppController.cpp  AppController.h  AsciiArt.cpp  AsciiArt.h  Blending.h  BraceMatch.cpp  BraceMatch.h  ColorPacking.h  CommandIds.h  CommandMappingTypes.h  CommandQueueUtils.cpp  CommandQueueUtils.h  CommandTextUtils.cpp  CommandTextUtils.h  DocConstants.h  DoubleMetaphone.cpp  DoubleMetaphone.h  EncodingUtils.cpp  EncodingUtils.h  Environment.cpp  Environment.h  ErrorDescriptions.cpp  ErrorDescriptions.h  FileExtensions.h  Flags.h  FontUtils.h  HyperlinkActionUtils.cpp  HyperlinkActionUtils.h  ImportMergeUtils.h  (+81 more)
src/dialogs/: ColourPickerDialog.cpp  ColourPickerDialog.h  CommandHistoryDialog.cpp  CommandHistoryDialog.h  ConfirmPreambleDialog.cpp  ConfirmPreambleDialog.h  FindDialog.cpp  FindDialog.h  GeneratedNameDialog.cpp  GeneratedNameDialog.h  GlobalPreferencesDialog.cpp  GlobalPreferencesDialog.h  HighlightPhraseDialog.cpp  HighlightPhraseDialog.h  ImportXmlDialog.cpp  ImportXmlDialog.h  LogSessionDialog.cpp  LogSessionDialog.h  PluginWizardDialog.cpp  PluginWizardDialog.h  PluginsDialog.cpp  PluginsDialog.h  SpellCheckDialog.cpp  SpellCheckDialog.h  TipDialog.cpp  TipDialog.h  WelcomeDialog.cpp  WelcomeDialog.h  WelcomeUpgradeDialog.cpp  WelcomeUpgradeDialog.h  WorldAliasDialog.cpp  WorldAliasDialog.h  WorldEditUtils.cpp  WorldPreferencesDialog.cpp  WorldPreferencesDialog.h  WorldTimerDialog.cpp  WorldTimerDialog.h  WorldTriggerDialog.cpp  WorldTriggerDialog.h
src/helpers/: AcceleratorUtils.cpp  AcceleratorUtils.h  AliasMatchUtils.cpp  AnsiSgrParseUtils.h  ColorUtils.cpp  ColorUtils.h  CommandPatternUtils.cpp  CommandPatternUtils.h  CommandQueueUtils.cpp  CommandTextUtils.cpp  EncodingUtils.cpp  EncodingUtils.h  FontUtils.cpp  HyperlinkActionUtils.cpp  HyperlinkActionUtils.h  LuaUtf8Utils.h  MainFrameActionUtils.cpp  MainFrameActionUtils.h  MainFrameMdiUtils.h  MainWindowHostResolver.cpp  MemoryImageDecodeCacheUtils.h  MiniWindowUtils.cpp  MiniWindowUtils.h  PluginCallbackCatalogUtils.h  ReloadPlannerUtils.cpp  ReloadPlannerUtils.h  ReloadRecoveryUtils.h  ReloadStateUtils.cpp  ReloadStateUtils.h  ReloadUtils.cpp  ReloadUtils.h  StartTlsFallbackUtils.h  TimeFormatUtils.h  TimerSchedulingUtils.cpp  TimerSchedulingUtils.h  TraceDispatchUtils.cpp  TraceDispatchUtils.h  UpdateCheckUtils.cpp  WorldCommandProcessorUtils.cpp  (+8 more)
tests/: CMakeLists.txt  README.md
tests/data/plugins/: minimal_plugin.xml  plugin_state_test.xml  plugin_with_warning.xml
tests/data/plugins/state/: dddddddddddddddddddddddd-eeeeeeeeeeeeeeeeeeeeeeee-state.xml
tests/data/worlds/: include_child.xml  malformed_world.xml  minimal_world.xml  world_sections.xml  world_with_plugin.xml  world_with_plugin_include.xml
tests/gui/: tst_Dialog_ColourPicker.cpp  tst_Dialog_GlobalPreferencesUpdates.cpp  tst_Dialog_ImportXml.cpp  tst_Dialog_LogSession.cpp  tst_Dialog_PluginWizard.cpp  tst_Dialog_Plugins.cpp  tst_Dialog_WorldPreferences.cpp  tst_MainFrame_Actions.cpp  tst_MdiTabs.cpp  tst_TabActivationHistory.cpp  tst_WorldView_Basic.cpp
tests/integration/: tst_ReloadIntegration.cpp  tst_ReloadRecoveryUtils.cpp  tst_ReloadStartupConsume.cpp  tst_TelnetProcessor_Compression.cpp  tst_TelnetProcessor_Encoding.cpp  tst_TelnetProcessor_Malformed.cpp  tst_TelnetProcessor_Mxp.cpp  tst_TelnetProcessor_Options.cpp  tst_TelnetProcessor_Subnegotiation.cpp  tst_WorldCommandProcessor_Alias.cpp  tst_WorldCommandProcessor_Queueing.cpp  tst_WorldCommandProcessor_Regex.cpp  tst_WorldCommandProcessor_SendTargets.cpp  tst_WorldCommandProcessor_Speedwalk.cpp  tst_WorldCommandProcessor_TimerAccounting.cpp  tst_WorldDocument_Includes.cpp  tst_WorldDocument_Load.cpp  tst_WorldDocument_Masks.cpp  tst_WorldDocument_RoundTrip.cpp  tst_WorldSocket_KeepAlive.cpp
tests/regression/: tst_RegexCompat.cpp
tests/smoke/: tst_QTestSmoke.cpp
tests/support/: TelnetCallbackSpy.cpp  TelnetCallbackSpy.h  TestEnvironment.cpp  TestEnvironment.h
tests/unit/: tst_AcceleratorUtils.cpp  tst_AnsiSgrParseUtils.cpp  tst_AsciiArt.cpp  tst_BraceMatch.cpp  tst_ColorUtils.cpp  tst_DoubleMetaphone.cpp  tst_EncodingUtils.cpp  tst_Environment.cpp  tst_FontUtils.cpp  tst_HyperlinkActionUtils.cpp  tst_ImportMergeUtils.cpp  tst_LuaLuacomShim.cpp  tst_LuaSupportCompat.cpp  tst_LuaUtf8Utils.cpp  tst_MainFrameMdiUtils.cpp  tst_MemoryImageDecodeCacheUtils.cpp  tst_MiniWindowUtils.cpp  tst_PluginCallbackCatalogUtils.cpp  tst_ReloadPlannerUtils.cpp  tst_ReloadStateUtils.cpp  tst_ReloadUnit.cpp  tst_ScriptErrorRoutingUtils.cpp  tst_StartTlsFallbackUtils.cpp  tst_StringUtils.cpp  tst_TimeFormatUtils.cpp  tst_TraceDispatchUtils.cpp  tst_TtsEngine.cpp  tst_UpdateCheckUtils.cpp  tst_WorldOptionDefaults.cpp  tst_WorldOptions.cpp  tst_WorldRuleEnableUtils.cpp  tst_WorldRuntimeAttributeUtils.cpp  tst_WorldSessionRestoreFlowUtils.cpp  tst_WorldSessionStateUtils.cpp
tools/: regex_compat_test.cpp
(+148 files in other folders)
